# AgentBridge

./: .dockerignore  .env.example  .gitignore  .npmignore  AGENTBRIDGE_TASKS.md  AgentBridge.md  Dockerfile  README.md  SERVER_STARTUP.md  SYNC_COMMUNICATION.md  agentbridge.service  bot.py  claude-ct1-bot.service  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  run_server.py  start.py  start_server.sh  tsconfig.json
.agentbridge/: event_schemas.json  messages.db  messages.db-shm  messages.db-wal
.claude/commands/: bridge.md
.github/workflows/: ci.yml  docs.yml
connectors/: README.md  TASK_EXECUTOR.md  ai_agent.py  claude_agent.py  executor_agent.py  orchestrator_agent.py  task_executor.py  windsurf_cascade.md
docs/: V2_DELTA_PLAN.md  index.html
public/: app.js  index.html  styles.css
scripts/: load_test.py  seed.ts
src/agentbridge/: __init__.py  __main__.py  cli.py  client.py  config.py  dashboard.html  deps.py  main.py  models.py  pubsub.py  rate_limit.py  rule_engine.py  schema_registry.py  server.py  sse_helpers.py  store.py  tui.py  ws_helpers.py  ws_manager.py
src/agentbridge/api/v1/: activity.py  admin.py  agents.py  approvals.py  auth.py  automation.py  costs.py  events.py  messages.py  router.py  tasks.py  threads.py  ws.py
src/agentbridge/middleware/: auth.py
src/agentbridge/transport/: mcp_tools.py  sse.py
src/core/: paperclipAdapter.ts  router.ts  store.ts  tools.ts  types.ts
src/mcp/: index.ts
src/server/: index.ts  validation.ts
tests/: store.test.ts  test_cli.py  test_server.py  validation.test.ts
