[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbridge"
version = "0.5.0"
description = "Inter-agent communication server — MCP + HTTP + CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
claude = [
    "anthropic>=0.40.0",
]

[project.scripts]
ab = "agentbridge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbridge"]
